MANY changes to MANY things in order to get my gradle file to work with the repository. Most of the changes were to my stuff, but I added an import statement at the top of Person2.java in order to make it work. Consider it fixed.

--- a/wkuzia3.gradle
+++ b/wkuzia3.gradle
@@ -13,6 +13,9 @@ repositories {
 jar {
     baseName = 'willjar'
     version =  '0.1.0'
+    manifest {
+        attributes 'Main-class' : 'edu.gatech.oad.antlab.pkg1.AntLabMain'
+    }
 }
 // end::jar[]
 
@@ -22,6 +25,7 @@ targetCompatibility = 1.8
 
 dependencies {
     compile "joda-time:joda-time:2.2"
+    compile files('lib/resources.jar')
 }
 // end::dependencies[]
 
